# youtube-trusted-session-generator

./: pyproject.toml
potoken_generator/: extractor.py  main.py
