[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "youtube-trusted-session-generator"
readme = "README.md"
description = "syncs youtube for offline play"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = "BSD-3-Clause"
classifiers = ["Programming Language :: Python :: 3"]
maintainers = [
    {name = "Zachary Vorhies"}
]

dependencies = [
  "nodriver==0.32",
  "undetected-chromedriver==3.5.5",
  "websockets==13.1"
]

# Change this with the version number bump.
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]


[project.scripts]
youtube-sync = "youtube_sync.cli.sync_one:main"
youtube-sync-all = "youtube_sync.cli.sync_multiple:main"

